--- a/nodes/NETSUITE_PREPARED-FCT_AR_INVOICE_PAYMENT_UNION_SUM.yml
+++ b/nodes/NETSUITE_PREPARED-FCT_AR_INVOICE_PAYMENT_UNION_SUM.yml
@@ -303,6 +303,7 @@ operation:
         config: {}
         dataType: VARCHAR(64)
         description: ""
+        isBusinessKey: true
         name: TYPE
         nullable: true
         sourceColumnReferences:
@@ -345,6 +346,7 @@ operation:
         config: {}
         dataType: VARCHAR(240)
         description: ""
+        isBusinessKey: true
         name: ACCOUNTINGLINETYPE
         nullable: true
         sourceColumnReferences:
@@ -708,6 +710,27 @@ operation:
         sourceColumnReferences:
           - columnReferences: []
             transform: CAST(CURRENT_TIMESTAMP AS TIMESTAMP)
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 2d8b5001-9d6f-453e-8096-92a98f3a982b
+          stepCounter: 8d4bbbed-c8b6-46f2-aef2-4a36e70ac998
+        config: {}
+        dataType: NUMBER
+        defaultValue: ""
+        description: ""
+        isBusinessKey: true
+        keyColumnType: None
+        name: TL_LINESEQUENCENUMBER
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: f42e3981-240d-4be7-923c-83aef564ba66
+                stepCounter: dac4270e-43e7-424e-9367-a8a86cae37d3
+            transform: ""
+        systemColumnType: None
     cteString: ""
     enabledColumnTestIDs: []
     sourceMapping:
