--- a/nodes/NETSUITE_PREPARED-STG_AR_INVOICE_PAYMENT_UNION_SUM.yml
+++ b/nodes/NETSUITE_PREPARED-STG_AR_INVOICE_PAYMENT_UNION_SUM.yml
@@ -705,6 +705,26 @@ operation:
                 stepCounter: "0"
             transform: CONCAT('https://5627172.app.netsuite.com/app/accounting/transactions/',LOWER("STG_AR_INVOICE_PAYMENT_UNION"."TYPE"),'.nl?id=',"STG_AR_INVOICE_PAYMENT_UNION"."TRANSACTION_ID")
         systemColumnType: None
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: f42e3981-240d-4be7-923c-83aef564ba66
+          stepCounter: dac4270e-43e7-424e-9367-a8a86cae37d3
+        config: {}
+        dataType: NUMBER
+        defaultValue: ""
+        description: ""
+        keyColumnType: None
+        name: TL_LINESEQUENCENUMBER
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 7b895c35-a282-4c38-b2ca-0c490c12a747
+                stepCounter: f5e3a6f4-5998-4194-b51e-34cba76fc9b2
+            transform: ""
+        systemColumnType: None
     cteString: ""
     enabledColumnTestIDs: []
     sourceMapping:
