--- a/nodes/NETSUITE_PREPARED-STG_CAPEX_TRANSACTIONS.yml
+++ b/nodes/NETSUITE_PREPARED-STG_CAPEX_TRANSACTIONS.yml
@@ -22,272 +22,6 @@ operation:
           values: []
         appliedColumnTests: {}
         columnReference:
-          columnCounter: 9ccc9619-219c-4262-baef-9b674e4c0113
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: VARCHAR
-        defaultValue: ""
-        description: ""
-        keyColumnType: None
-        name: ACCOUNT_NAME
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: 1d259708-f96e-4fa1-8452-936e55a6f4dd
-                stepCounter: 53e69994-949c-4966-b1c4-66e0537f90eb
-            transform: ""
-        systemColumnType: None
-      - acceptedValues:
-          strictMatch: true
-          values: []
-        appliedColumnTests: {}
-        columnReference:
-          columnCounter: 77216919-3d57-45b1-a7aa-d35418d94cc1
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: VARCHAR
-        defaultValue: ""
-        description: ""
-        keyColumnType: None
-        name: ENTITY_OTHERNAME
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: c09a29ee-4a7b-4b3b-a5cf-1dc62630c399
-                stepCounter: 09f5cf2d-a85f-4a02-8eb2-949c9eb92640
-            transform: ""
-        systemColumnType: None
-      - acceptedValues:
-          strictMatch: true
-          values: []
-        appliedColumnTests: {}
-        columnReference:
-          columnCounter: 6452b2d6-9253-45e0-9305-13f76a46df79
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: VARCHAR()
-        defaultValue: ""
-        description: ""
-        keyColumnType: None
-        name: ITME_NAME
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: baa199e3-a681-4f52-bd4d-28611569fbb8
-                stepCounter: 7beb3a58-9300-4608-813c-a7cd2e25fe1c
-            transform: ""
-        systemColumnType: None
-      - acceptedValues:
-          strictMatch: true
-          values: []
-        appliedColumnTests: {}
-        columnReference:
-          columnCounter: a1aa322f-0419-4cfa-a61a-b140a4c982e7
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: VARCHAR
-        defaultValue: ""
-        description: ""
-        keyColumnType: None
-        name: ITEM_ITEMTYPE
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: 294fc38e-c2ca-4bdc-a87c-c9b3d0e84f4a
-                stepCounter: 7beb3a58-9300-4608-813c-a7cd2e25fe1c
-            transform: |-
-              CASE
-                  WHEN "STG_ITEM"."ITEMTYPE" is null then 'Other'
-                  ELSE "STG_ITEM"."ITEMTYPE"
-              END
-        systemColumnType: None
-      - appliedColumnTests: {}
-        columnReference:
-          columnCounter: 12cb4cec-a006-4c3f-9383-e8fcc9d81acd
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: NUMBER(38,0)
-        description: ""
-        name: ACCOUNT
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: 5f454f30-4dff-4368-a692-f6dbdd38baa3
-                stepCounter: 40721649-298a-4db0-9be1-b79a1e84278a
-            transform: ""
-      - appliedColumnTests: {}
-        columnReference:
-          columnCounter: 0b41a771-c19a-4f40-9445-41db7b196a37
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: FLOAT
-        description: ""
-        name: AMOUNT
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: 4c8e59bb-d294-458f-8ba0-ecb8a26a9e09
-                stepCounter: 40721649-298a-4db0-9be1-b79a1e84278a
-            transform: ""
-      - appliedColumnTests: {}
-        columnReference:
-          columnCounter: 90818a23-7254-4a49-a502-9a0f7ba439f6
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: TIMESTAMP_TZ(9)
-        description: ""
-        name: DATE
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: 217f336a-78f0-42b1-b518-4b6e4c426050
-                stepCounter: 40721649-298a-4db0-9be1-b79a1e84278a
-            transform: ""
-      - appliedColumnTests: {}
-        columnReference:
-          columnCounter: 85f837b0-07cf-4b3a-a893-83b294fca63f
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: NUMBER(38,0)
-        description: ""
-        name: EXPENSECATEGORY
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: ff5fef04-afd1-4eaf-a6e1-e1cd08846383
-                stepCounter: 40721649-298a-4db0-9be1-b79a1e84278a
-            transform: ""
-      - appliedColumnTests: {}
-        columnReference:
-          columnCounter: f3b3fd75-856b-4afe-ad49-bd271611aca5
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: NUMBER(38,0)
-        description: ""
-        name: PROJECT
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: fd2ee23d-432c-4b38-941f-c5893cf60eee
-                stepCounter: 40721649-298a-4db0-9be1-b79a1e84278a
-            transform: ""
-      - appliedColumnTests: {}
-        columnReference:
-          columnCounter: 9bf38ff4-e640-4492-8823-80286cb4b458
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: NUMBER(38,0)
-        description: ""
-        name: SOURCEENTITYKEY
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: 9673fd93-d19a-4325-9f0a-0c838586dbcc
-                stepCounter: 40721649-298a-4db0-9be1-b79a1e84278a
-            transform: ""
-      - appliedColumnTests: {}
-        columnReference:
-          columnCounter: 57653bdf-ae02-479b-bf9f-9d90dd17fb48
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: VARCHAR(1536)
-        description: ""
-        name: SOURCEENTITYTYPE
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: b9f7d5f1-3e1e-4994-9dd7-14ea35da2cf9
-                stepCounter: 40721649-298a-4db0-9be1-b79a1e84278a
-            transform: ""
-      - appliedColumnTests: {}
-        columnReference:
-          columnCounter: fc3b9cfa-c6fa-4f70-92fd-66724d591c88
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: NUMBER(38,0)
-        description: ""
-        name: SOURCEKEY
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: de05ee24-0e3a-434d-83fb-77f3bb166d8e
-                stepCounter: 40721649-298a-4db0-9be1-b79a1e84278a
-            transform: ""
-      - appliedColumnTests: {}
-        columnReference:
-          columnCounter: 16ee2a14-07ab-4f29-a092-5cdcc5febc02
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: VARCHAR(1536)
-        description: ""
-        name: SOURCETYPE
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: 731ebe64-9e86-499c-a0f4-447d07d8b934
-                stepCounter: 40721649-298a-4db0-9be1-b79a1e84278a
-            transform: ""
-      - appliedColumnTests: {}
-        columnReference:
-          columnCounter: f9e3b3f2-7775-4c76-951f-d00739acec6f
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: NUMBER(38,0)
-        description: ""
-        name: SUBSIDIARY
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: 77530fc6-78b3-40fd-96da-a73a33ae0bc6
-                stepCounter: 40721649-298a-4db0-9be1-b79a1e84278a
-            transform: ""
-      - appliedColumnTests: {}
-        columnReference:
-          columnCounter: 7c163157-8713-4141-9b61-d2d9f91aef02
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: NUMBER(38,0)
-        description: ""
-        name: TRANSACTION
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: 8d0742d1-72ca-41dc-ac79-716803689b07
-                stepCounter: 40721649-298a-4db0-9be1-b79a1e84278a
-            transform: ""
-      - appliedColumnTests: {}
-        columnReference:
-          columnCounter: a664c053-c630-4ad5-a9a6-a232ebf2272b
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: NUMBER(38,0)
-        description: ""
-        name: TRANSACTIONLINE
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: fdf05826-9abd-4f4f-87b1-68dd20e533f4
-                stepCounter: 40721649-298a-4db0-9be1-b79a1e84278a
-            transform: ""
-      - appliedColumnTests: {}
-        columnReference:
-          columnCounter: abf8b31b-d356-494c-9d1e-bf19803954b2
-          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
-        config: {}
-        dataType: VARCHAR(1536)
-        description: ""
-        name: TRANSACTIONTYPE
-        nullable: true
-        sourceColumnReferences:
-          - columnReferences:
-              - columnCounter: cef6bda0-97f6-4fe8-8d56-9214b53b5e80
-                stepCounter: 40721649-298a-4db0-9be1-b79a1e84278a
-            transform: ""
-      - acceptedValues:
-          strictMatch: true
-          values: []
-        appliedColumnTests: {}
-        columnReference:
           columnCounter: 15d25298-c5ea-443a-af57-83b3e369580b
           stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
         config: {}
@@ -788,64 +522,144 @@ operation:
           values: []
         appliedColumnTests: {}
         columnReference:
-          columnCounter: 3f9c6b39-5cbe-4f7f-a086-46f2e192dd39
+          columnCounter: 3effecc7-4f94-4fec-af4d-ffc48e30d6de
+          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
+        config: {}
+        dataType: NUMBER
+        defaultValue: ""
+        description: ""
+        keyColumnType: None
+        name: CUSTBODY_SEQL_RELATED_PROJECT
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: a4cf7695-2cbf-468d-a20b-b1f689bdbc26
+                stepCounter: 80ac8310-eaee-4fea-b3b2-368e513f27fc
+            transform: ""
+        systemColumnType: None
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 505c3303-1787-4ee2-8fd0-6f2acd977bd8
+          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
+        config: {}
+        dataType: NUMBER
+        defaultValue: ""
+        description: ""
+        keyColumnType: None
+        name: TRANSACTION_ID
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 999a68e5-533d-477c-9ad9-dbac6a43cd47
+                stepCounter: 80ac8310-eaee-4fea-b3b2-368e513f27fc
+            transform: ""
+        systemColumnType: None
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: d01486c1-f8bd-45ed-a7b9-8314d4951d21
+          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
+        config: {}
+        dataType: NUMBER
+        defaultValue: ""
+        description: ""
+        keyColumnType: None
+        name: TRANSLINE_ENTITY
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: ee6825a4-1a91-4b79-b401-4ef8ad04a6f8
+                stepCounter: ab3fb650-78a3-4be2-a523-cd73d32ab66c
+            transform: ""
+        systemColumnType: None
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 0a25ba17-825e-467b-9f66-57c668497330
           stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
         config: {}
         dataType: VARCHAR
         defaultValue: ""
         description: ""
         keyColumnType: None
-        name: SUBSIDIARY_NAME
+        name: TRANS_BILLING_STATUS
         nullable: true
         sourceColumnReferences:
           - columnReferences:
-              - columnCounter: 9b468bb3-cd10-49bb-8bcc-827b17f9d305
-                stepCounter: 8c969c70-8595-499c-a121-502b58cd08a3
+              - columnCounter: 3822a8d3-6352-4ed7-9996-f2bb178a262a
+                stepCounter: 80ac8310-eaee-4fea-b3b2-368e513f27fc
             transform: ""
+        systemColumnType: None
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: f91497ab-106c-4191-9f36-44423f13ef89
+          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
+        config: {}
+        dataType: VARCHAR
+        defaultValue: ""
+        description: ""
+        keyColumnType: None
+        name: TRANS_STATUS_CLEANED
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: "0"
+                stepCounter: "0"
+            transform: CASE WHEN  "STG_TRANSACTION"."TYPE" = 'VendBill' and "STG_TRANSACTION"."STATUS" = 'E' THEN 'Bill Rejected' WHEN  "STG_TRANSACTION"."TYPE" = 'VendBill' and "STG_TRANSACTION"."STATUS" = 'C' THEN 'Bill Cancelled' WHEN  "STG_TRANSACTION"."TYPE" = 'VendBill' and "STG_TRANSACTION"."STATUS" = 'A' THEN 'Bill Open' WHEN  "STG_TRANSACTION"."TYPE" = 'VendBill' and "STG_TRANSACTION"."STATUS" = 'B' THEN 'Bill Paid in Full' WHEN  "STG_TRANSACTION"."TYPE" = 'VendBill' and "STG_TRANSACTION"."STATUS" = 'D' THEN 'Bill Pending Approval' ELSE NULL END
+        systemColumnType: None
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 208eaff6-ab53-43a7-a40f-dbfb1f6828f5
+          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
+        config: {}
+        dataType: VARCHAR
+        defaultValue: ""
+        description: ""
+        keyColumnType: None
+        name: NETSUITE_TRANSACTION_LINK
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: "0"
+                stepCounter: "0"
+            transform: CONCAT('https://5627172.app.netsuite.com/app/accounting/transactions/',LOWER("STG_TRANSACTION"."TYPE"),'.nl?id=',"STG_TRANSACTION"."ID")
         systemColumnType: None
     cteString: ""
     enabledColumnTestIDs: []
     sourceMapping:
       - aliases:
-          STG_ACCOUNT: 53e69994-949c-4966-b1c4-66e0537f90eb
-          STG_ENTITY: 09f5cf2d-a85f-4a02-8eb2-949c9eb92640
-          STG_ITEM: 7beb3a58-9300-4608-813c-a7cd2e25fe1c
-          STG_PROJECTFINANCIALS: 40721649-298a-4db0-9be1-b79a1e84278a
-          STG_SUBSIDIARY: 8c969c70-8595-499c-a121-502b58cd08a3
+          STG_JOB: 69728e88-069c-4f87-be3d-ac62f15ddb57
           STG_TRANSACTION: 80ac8310-eaee-4fea-b3b2-368e513f27fc
           STG_TRANSACTIONLINE: ab3fb650-78a3-4be2-a523-cd73d32ab66c
         customSQL:
           customSQL: ""
         dependencies:
           - locationName: NETSUITE_PREPARED
-            nodeName: STG_ACCOUNT
-          - locationName: NETSUITE_PREPARED
-            nodeName: STG_ENTITY
-          - locationName: NETSUITE_PREPARED
-            nodeName: STG_ITEM
-          - locationName: NETSUITE_PREPARED
-            nodeName: STG_PROJECTFINANCIALS
-          - locationName: NETSUITE_PREPARED
-            nodeName: STG_SUBSIDIARY
+            nodeName: STG_JOB
           - locationName: NETSUITE_PREPARED
             nodeName: STG_TRANSACTION
           - locationName: NETSUITE_PREPARED
             nodeName: STG_TRANSACTIONLINE
         join:
-          joinCondition: |-
-            FROM {{ ref('NETSUITE_PREPARED', 'STG_PROJECTFINANCIALS') }} "STG_PROJECTFINANCIALS"
-            LEFT JOIN {{ ref('NETSUITE_PREPARED', 'STG_ITEM') }} "STG_ITEM"
-            ON "STG_PROJECTFINANCIALS".ITEM = "STG_ITEM".ID
-            LEFT JOIN {{ ref('NETSUITE_PREPARED', 'STG_TRANSACTION') }} "STG_TRANSACTION"
-            ON "STG_PROJECTFINANCIALS"."TRANSACTION" = "STG_TRANSACTION".ID
-            LEFT JOIN {{ ref('NETSUITE_PREPARED', 'STG_TRANSACTIONLINE') }} "STG_TRANSACTIONLINE"
-            ON "STG_PROJECTFINANCIALS"."TRANSACTION" = "STG_TRANSACTIONLINE"."TRANSACTION" AND "STG_PROJECTFINANCIALS"."TRANSACTIONLINE" = "STG_TRANSACTIONLINE"."ID"
-            LEFT JOIN {{ ref('NETSUITE_PREPARED', 'STG_ACCOUNT') }} "STG_ACCOUNT"
-            ON "STG_PROJECTFINANCIALS"."ACCOUNT" = "STG_ACCOUNT"."ID"
-            LEFT JOIN {{ ref('NETSUITE_PREPARED', 'STG_SUBSIDIARY') }} "STG_SUBSIDIARY"
-            ON "STG_PROJECTFINANCIALS"."SUBSIDIARY" = "STG_SUBSIDIARY"."ID"
-            LEFT JOIN {{ ref('NETSUITE_PREPARED', 'STG_ENTITY') }} "STG_ENTITY"
-            ON "STG_PROJECTFINANCIALS"."SOURCEENTITYKEY" = "STG_ENTITY"."ID"
+          joinCondition: |
+            FROM {{ ref('NETSUITE_PREPARED', 'STG_TRANSACTION') }} "STG_TRANSACTION"
+            JOIN {{ ref('NETSUITE_PREPARED', 'STG_TRANSACTIONLINE') }} "STG_TRANSACTIONLINE"
+            ON "STG_TRANSACTIONLINE"."TRANSACTION" = "STG_TRANSACTION"."ID"
+            JOIN {{ ref('NETSUITE_PREPARED', 'STG_JOB') }} "STG_JOB"
+            ON "STG_TRANSACTIONLINE"."ENTITY" = "STG_JOB"."ID"
         name: STG_CAPEX_TRANSACTIONS
         noLinkRefs: []
   name: STG_CAPEX_TRANSACTIONS
