--- a/nodes/NETSUITE_PREPARED-STG_CAPEX_TRANSACTIONS.yml
+++ b/nodes/NETSUITE_PREPARED-STG_CAPEX_TRANSACTIONS.yml
@@ -657,6 +657,26 @@ operation:
                 stepCounter: ab3fb650-78a3-4be2-a523-cd73d32ab66c
             transform: ""
         systemColumnType: None
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: d4a491d8-ca2d-4c4c-bf07-0fa4774c40e6
+          stepCounter: 4f9b7bcf-3b93-469b-a7b7-b2d5a8aa9587
+        config: {}
+        dataType: NUMBER
+        defaultValue: ""
+        description: ""
+        keyColumnType: None
+        name: TRANS_ENTITY
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: 30e821eb-79e6-4596-8f88-ef88d84fa7f4
+                stepCounter: 80ac8310-eaee-4fea-b3b2-368e513f27fc
+            transform: ""
+        systemColumnType: None
     cteString: ""
     enabledColumnTestIDs: []
     sourceMapping:
