--- a/nodes/NETSUITE_RAW-TRANSACTION.yml
+++ b/nodes/NETSUITE_RAW-TRANSACTION.yml
@@ -4987,6 +4987,120 @@ operation:
             transform: ""
         transform: ""
         uniqueKey: false
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 07a8a033-d89c-47bd-b81b-8433a4c32949
+          stepCounter: bf350f97-8c86-4984-baac-d434dba8a50b
+        config: {}
+        dataType: VARCHAR(8)
+        defaultValue: ""
+        description: ""
+        name: CUSTBODY_CUSTOMER_SERVICE_BILL
+        nullable: true
+        primaryKey: false
+        sourceColumnReferences:
+          - columnReferences: []
+            transform: ""
+        transform: ""
+        uniqueKey: false
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 0d619a9f-ec19-47f1-9007-9e1971346ecf
+          stepCounter: bf350f97-8c86-4984-baac-d434dba8a50b
+        config: {}
+        dataType: VARCHAR(2400)
+        defaultValue: ""
+        description: ""
+        name: CUSTBODY_COLLECTION_NOTES
+        nullable: true
+        primaryKey: false
+        sourceColumnReferences:
+          - columnReferences: []
+            transform: ""
+        transform: ""
+        uniqueKey: false
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 6ca30ed6-1fc1-4ab6-88c1-f6e9c7188ce0
+          stepCounter: bf350f97-8c86-4984-baac-d434dba8a50b
+        config: {}
+        dataType: VARCHAR(8)
+        defaultValue: ""
+        description: ""
+        name: CUSTBODY4
+        nullable: true
+        primaryKey: false
+        sourceColumnReferences:
+          - columnReferences: []
+            transform: ""
+        transform: ""
+        uniqueKey: false
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 7d791df3-f9ce-48bc-894e-2cb026d6e867
+          stepCounter: bf350f97-8c86-4984-baac-d434dba8a50b
+        config: {}
+        dataType: NUMBER(38,0)
+        defaultValue: ""
+        description: ""
+        name: PARENTEXPENSEALLOC
+        nullable: true
+        primaryKey: false
+        sourceColumnReferences:
+          - columnReferences: []
+            transform: ""
+        transform: ""
+        uniqueKey: false
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 3c94b2e9-cf83-4d93-8f7a-4541c8101f01
+          stepCounter: bf350f97-8c86-4984-baac-d434dba8a50b
+        config: {}
+        dataType: NUMBER(38,0)
+        defaultValue: ""
+        description: ""
+        name: SHIPMETHOD
+        nullable: true
+        primaryKey: false
+        sourceColumnReferences:
+          - columnReferences: []
+            transform: ""
+        transform: ""
+        uniqueKey: false
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 9d6dba61-10a7-400d-a575-341f2215c13f
+          stepCounter: bf350f97-8c86-4984-baac-d434dba8a50b
+        config: {}
+        dataType: NUMBER(38,0)
+        defaultValue: ""
+        description: ""
+        name: JOB
+        nullable: true
+        primaryKey: false
+        sourceColumnReferences:
+          - columnReferences: []
+            transform: ""
+        transform: ""
+        uniqueKey: false
     join:
       joinCondition: FROM {{ ref('NETSUITE_RAW', 'TRANSACTION') }}
   name: TRANSACTION
