--- a/nodes/NETSUITE_PREPARED-STG_AR_INVOICE_PAYMENT_UNION_SUM.yml
+++ b/nodes/NETSUITE_PREPARED-STG_AR_INVOICE_PAYMENT_UNION_SUM.yml
@@ -745,6 +745,26 @@ operation:
                 stepCounter: f5e3a6f4-5998-4194-b51e-34cba76fc9b2
             transform: ""
         systemColumnType: None
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 7ff7f20c-744d-4579-a329-12d70687bd4d
+          stepCounter: dac4270e-43e7-424e-9367-a8a86cae37d3
+        config: {}
+        dataType: VARCHAR
+        defaultValue: ""
+        description: ""
+        keyColumnType: None
+        name: TRANSACTION_COLLECTION_NOTES
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: f06aa8b7-a673-435f-9100-45b2192ff9bd
+                stepCounter: f5e3a6f4-5998-4194-b51e-34cba76fc9b2
+            transform: ""
+        systemColumnType: None
     cteString: ""
     enabledColumnTestIDs: []
     sourceMapping:
