--- a/nodes/WABTEC_PREPARED-STG_NX_SUPERTRIP_PARENT_CALCS.yml
+++ b/nodes/WABTEC_PREPARED-STG_NX_SUPERTRIP_PARENT_CALCS.yml
@@ -4777,6 +4777,46 @@ operation:
                       ELSE 0
                END
         systemColumnType: None
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: 76ffa77c-cf08-4adf-9436-e60512fd1e11
+          stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
+        config: {}
+        dataType: DATE
+        defaultValue: ""
+        description: ""
+        keyColumnType: None
+        name: TRIP_BEGIN_DATE_CONVERTED
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: b496e231-645b-45f2-9d0e-66220863ccac
+                stepCounter: 5e01994d-7a43-4337-bf30-938e5412c9a6
+            transform: ""
+        systemColumnType: None
+      - acceptedValues:
+          strictMatch: true
+          values: []
+        appliedColumnTests: {}
+        columnReference:
+          columnCounter: d74bc077-0522-48eb-b9cf-ea018a489fda
+          stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
+        config: {}
+        dataType: DATE
+        defaultValue: ""
+        description: ""
+        keyColumnType: None
+        name: TRIP_END_DATE_CONVERTED
+        nullable: true
+        sourceColumnReferences:
+          - columnReferences:
+              - columnCounter: b1bad8a0-2442-4f91-97e0-1dbb84c450be
+                stepCounter: 5e01994d-7a43-4337-bf30-938e5412c9a6
+            transform: ""
+        systemColumnType: None
     cteString: ""
     enabledColumnTestIDs: []
     sourceMapping:
